--- a/generators/app/templates/flutter/flutter-app/lib/account/login/login_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/login/login_screen.dart.ejs
@@ -52,7 +52,6 @@ class LoginScreen extends StatelessWidget {
               onChanged: loginBloc.changeLogin,
               keyboardType: TextInputType.text,
               decoration: InputDecoration(
-                  border: OutlineInputBorder(),
                   labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormLogin <%_ } else { _%> 'Login' <%_ } _%>,
                   errorText: snapshot.error));
         });
@@ -66,7 +65,6 @@ class LoginScreen extends StatelessWidget {
               onChanged: loginBloc.changePassword,
               obscureText: true,
               decoration: InputDecoration(
-                  border: OutlineInputBorder(),
                   labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormPassword <%_ } else { _%> 'Password' <%_ } _%>,
                   errorText: snapshot.error));
         });
@@ -91,7 +89,6 @@ class LoginScreen extends StatelessWidget {
           height: 50,
           child: Center(
             child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterTitle.toUpperCase() <%_ } else { _%> 'Register'.toUpperCase() <%_ } _%>,
-              style: TextStyle(fontSize: 15),
             ),
           )),
       onPressed: () => Navigator.pushNamed(context, <%= camelizedUpperFirstBaseName %>Routes.register),
@@ -107,7 +104,7 @@ class LoginScreen extends StatelessWidget {
               child: Center(
                 child: Text(
                   generateError(snapshot, context),
-                  style: TextStyle(color: Colors.red),
+                  style: TextStyle(fontSize: Theme.of(context).textTheme.bodyText1.fontSize, color: Theme.of(context).errorColor),
                 ),
               ));
         });
@@ -118,7 +115,6 @@ class LoginScreen extends StatelessWidget {
         stream: loginBloc.submitValid,
         builder: (context, snapshotSubmit) {
           return RaisedButton(
-            color: Colors.blue,
             child: Container(
                 width: MediaQuery.of(context).size.width,
                 height: 50,
@@ -128,10 +124,8 @@ class LoginScreen extends StatelessWidget {
                       return Center(
                         child: Visibility(
                           replacement: CircularProgressIndicator(value: null),
-                          visible:
-                              snapshotLoading.hasData && !snapshotLoading.data,
+                          visible: snapshotLoading.hasData && !snapshotLoading.data,
                           child: Text(<%_ if (enableTranslation) { _%>S.of(context).pageLoginLoginButton.toUpperCase()<%_ } else { _%>'Sign in'.toUpperCase()<%_ } _%>,
-                                style: TextStyle(fontSize: 15),
                           ),
                         ),
                       );
