--- a/generators/app/templates/flutter/flutter-app/lib/account/settings/settings_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/settings/settings_screen.dart.ejs
@@ -9,6 +9,8 @@ import 'package:flutter/material.dart';
 import 'package:flutter/widgets.dart';
 import 'package:<%= baseName %>/shared/bloc/bloc_provider.dart';
 import 'package:<%= baseName %>/shared/repository/http_utils.dart';
+import 'package:<%= baseName %>/shared/widgets/drawer/drawer_bloc.dart';
+import 'package:<%= baseName %>/shared/widgets/drawer/drawer_widget.dart';
 
 class SettingsScreen extends StatelessWidget {
   SettingsScreen() : super(key: <%= camelizedUpperFirstBaseName %>Keys.settingsScreen);
@@ -25,7 +27,8 @@ class SettingsScreen extends StatelessWidget {
         body: SingleChildScrollView(
           padding: const EdgeInsets.all(15.0),
           child: Column(children: <Widget>[settingsForm(settingsBloc, context)]),
-        ));
+        ),
+        drawer: BlocProvider<<%= camelizedUpperFirstBaseName %>DrawerBloc>(bloc: <%= camelizedUpperFirstBaseName %>DrawerBloc() ,child: <%= camelizedUpperFirstBaseName %>Drawer()));
   }
 
   Widget settingsForm(SettingsBloc settingsBloc, BuildContext context) {
@@ -56,7 +59,6 @@ class SettingsScreen extends StatelessWidget {
                 onChanged: onChange,
                 keyboardType: type,
                 decoration: InputDecoration(
-                    border: OutlineInputBorder(),
                     labelText: labelText,
                     errorText: snapshot.error));
         }
@@ -75,7 +77,7 @@ class SettingsScreen extends StatelessWidget {
                 child: Row(
                   mainAxisAlignment: MainAxisAlignment.spaceBetween,
                   children: <Widget>[
-                    Text(<%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormLanguages <%_ } else { _%> 'Languages' <%_ } _%>, style: TextStyle(fontSize: 16)),
+                    Text(<%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormLanguages <%_ } else { _%> 'Languages' <%_ } _%>, style: Theme.of(context).textTheme.bodyText1,),
                     DropdownButton<String>(
                         value: snapshot.data,
                         onChanged: (key) => settingsBloc.changeLanguage(key),
@@ -102,10 +104,8 @@ class SettingsScreen extends StatelessWidget {
       stream: settingsBloc.submitValid,
       builder: (context, snapshotSubmit) {
         return RaisedButton(
-          color: Colors.teal,
           child: Container(
               width: MediaQuery.of(context).size.width,
-              height: 50,
               child: StreamBuilder<bool>(
                   stream: settingsBloc.isLoadingStream,
                   builder: (context, snapshotLoading) {
@@ -114,7 +114,6 @@ class SettingsScreen extends StatelessWidget {
                         replacement: CircularProgressIndicator(value: null),
                         visible: snapshotLoading.hasData && !snapshotLoading.data,
                         child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageSettingsFormSave.toUpperCase() <%_ } else { _%> 'SAVE' <%_ } _%>,
-                          style: TextStyle(fontSize: 15, color: Colors.white),
                         ),
                       ),
                     );
@@ -151,13 +150,13 @@ class SettingsScreen extends StatelessWidget {
         MaterialColor notificationColors;
         if(snapshot.hasData && snapshot.data.compareTo(SettingsBloc.successKey) == 0) {
            notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageSettingsSuccessSave <%_ } else { _%> 'Settings saved !' <%_ } _%>;
-           notificationColors = Colors.green;
+           notificationColors =  Theme.of(context).primaryColor;
         } else if(snapshot.error.toString().compareTo(SettingsBloc.badrequestKey) == 0) {
            notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageSettingsSuccessErrorBadRequest <%_ } else { _%> 'Something wrong happended with the data' <%_ } _%>;
-           notificationColors = Colors.red;
+           notificationColors = Theme.of(context).errorColor;
         } else if (snapshot.error.toString().compareTo(HttpUtils.errorServerKey) == 0) {
            notificationTranslated = <%_ if (enableTranslation) { _%> S.of(context).pageSettingsSuccessErrorServer <%_ } else { _%> 'Something wrong when calling the server, please try again' <%_ } _%>;
-           notificationColors = Colors.red;
+           notificationColors = Theme.of(context).errorColor;
         }
 
         return Text(
