--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
@@ -30,6 +30,7 @@
   "drawerSettingsTitle": "Settings",
   "drawerLogoutTitle": "Sign out",
   "drawerMenuTitle": "Menu",
+  "drawerMenuMain": "Home",
   "pageSettingsTitle": "Settings",
   "pageSettingsFormFirstname": "Firstname",
   "pageSettingsFormLastname": "Lastname",
