--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
@@ -25,6 +25,7 @@
   "drawerSettingsTitle": "Profil",
   "drawerLogoutTitle": "Deconnexion",
   "drawerMenuTitle": "Menu",
+  "drawerMenuMain": "Accueil",
   "pageSettingsTitle": "Paramètres",
   "pageSettingsFormFirstname": "Prénom",
   "pageSettingsFormLastname": "Nom",
