--- a/generators/app/templates/flutter/flutter-app/lib/main/main_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main/main_screen.dart.ejs
@@ -25,7 +25,8 @@ class MainScreen extends StatelessWidget {
         title: Text(<%_ if (enableTranslation) { _%> S.of(context).pageMainTitle <%_ } else { _%> 'Main page' <%_ } _%>),
       ),
       body: body(context, mainBloc),
-      drawer: BlocProvider<<%= camelizedUpperFirstBaseName %>DrawerBloc>(bloc: <%= camelizedUpperFirstBaseName %>DrawerBloc() ,child: <%= camelizedUpperFirstBaseName %>Drawer())
+      drawer: BlocProvider<<%= camelizedUpperFirstBaseName %>DrawerBloc>(bloc: <%= camelizedUpperFirstBaseName %>DrawerBloc(),
+           child: <%= camelizedUpperFirstBaseName %>Drawer())
     );
   }
 
@@ -35,7 +36,6 @@ class MainScreen extends StatelessWidget {
       children: <Widget>[
         Column(
           mainAxisAlignment: MainAxisAlignment.center,
-          crossAxisAlignment: CrossAxisAlignment.center,
           children: <Widget>[
             currentUserWidget(context, mainBloc),
             Padding(padding: EdgeInsets.symmetric(vertical: 10),),
@@ -56,10 +56,12 @@ class MainScreen extends StatelessWidget {
       builder: (context, snapshot) {
         String login = snapshot.data?.login != null ? snapshot.data?.login : '';
         return Column(
+          mainAxisAlignment: MainAxisAlignment.center,
           children: <Widget>[
-            Text(<%_ if (enableTranslation) { _%> S.of(context).pageMainCurrentUser(login) <%_ } else { _%> 'Current user: ' + login <%_ } _%>, style: TextStyle(fontSize: 20), textAlign: TextAlign.center,),
+            Text(<%_ if (enableTranslation) { _%> S.of(context).pageMainCurrentUser(login) <%_ } else { _%> 'Current user: ' + login <%_ } _%>, style: Theme.of(context).textTheme.headline3),
             Padding(padding: EdgeInsets.symmetric(vertical: 5),),
-            Text(<%_ if (enableTranslation) { _%> S.of(context).pageMainWelcome <%_ } else { _%> 'Welcome to your Jhipster flutter app' <%_ } _%>, style: TextStyle(fontSize: 20), textAlign: TextAlign.center,),
+            SizedBox(width: MediaQuery.of(context).size.width * 0.80,
+                child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageMainWelcome <%_ } else { _%> 'Welcome to your Jhipster flutter app' <%_ } _%>, textAlign: TextAlign.center, style: Theme.of(context).textTheme.headline3)),
           ],
         );
       }
@@ -67,13 +69,15 @@ class MainScreen extends StatelessWidget {
   }
 
   Widget linkWidget(BuildContext context, String text, String url){
-    return RaisedButton(
-        onPressed: () => _launchURL(url),
-        color: Colors.teal,
-        child: Container(
-          child: Text(text, textAlign: TextAlign.center, style: TextStyle(fontSize: 16, color: Colors.white),),
-          width: MediaQuery.of(context).size.width * 0.5,)
-    );
+      return Padding(
+            padding: const EdgeInsets.only(bottom: 15),
+            child: RaisedButton(
+               onPressed: () => _launchURL(url),
+               child: Container(
+                  child: Text(text, textAlign: TextAlign.center,),
+                  width: MediaQuery.of(context).size.width * 0.5,)
+            ),
+     );
   }
 
   _launchURL(String url) async {
