Fix compilation when no i18n Adding gif or for docs

--- a/generators/app/templates/flutter/flutter-app/lib/main/main_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main/main_screen.dart.ejs
@@ -90,11 +90,13 @@ class MainScreen extends StatelessWidget {
 
 
   init(BuildContext context, MainBloc bloc) async {
-    bool reload = await bloc.init();
     <%_ if (enableTranslation) { _%>
+    bool reload = await bloc.init();
     if(reload) {
       Navigator.popAndPushNamed(context, <%= camelizedUpperFirstBaseName %>Routes.main);
     }
+    <%_ } else { _%>
+    bloc.init();
     <%_ } _%>
   }
 
